--- a/hipotheses-driven-data-cleansing-on-sharks-attacks.ipynb
+++ b/hipotheses-driven-data-cleansing-on-sharks-attacks.ipynb
@@ -262,6 +262,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5992, 24)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": true
