--- a/hipotheses-driven-data-cleansing-on-sharks-attacks.ipynb
+++ b/hipotheses-driven-data-cleansing-on-sharks-attacks.ipynb
@@ -4,36 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gestión de datos según planteamiento de hipótesis - Ataques de tiburón\n",
+    "# Hypothesis driven data cleaning on shark attacks\n",
     "\n",
-    "- Hipótesis 1: Las personas que pescan (con arpón) reciben más ataques que las que realizan otra actividad.\n",
-    "- Hipótesis 2: Las mujeres sufren menos ataques de tiburones que los hombres.\n",
-    "- Hipótesis 3: Los registros de ataques son más frecuentes cuanto más nos acercamos a la actualidad"
+    "- Hypothesis # 1: Spear-fishers are more frequently attacked than peolpe doing any other activity.\n",
+    "\n",
+    "- Hypothesis # 2: Women are less attacked by sharks than men.\n",
+    "\n",
+    "- Hypothesis # 3: The more recent the event, the higher the records are."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import matplotlib.pylab as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Previsualización"
+    "TO-DO:\n",
+    "\n",
+    "- cross-table\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Previsualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5992, 24)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -250,39 +268,20 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"input/GSAF5.csv\", encoding = 'latin1')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5992, 24)"
-      ]
-     },
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "df = pd.read_csv(\"input/GSAF5.csv\", encoding = 'latin1')\n",
+    "print(df.shape)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -317,13 +316,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Para obtener los valores nulos de cada columna:\n",
+    "#Obtaining null values for every column:\n",
     "\n",
     "df.isnull().sum()"
    ]
@@ -332,12 +331,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. Limpieza preliminar"
+    "# 0. Preliminary cleansing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -346,13 +345,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lista de columnas original: Index(['Case Number', 'Date', 'Year', 'Type', 'Country', 'Area', 'Location',\n",
+      "Original list of columns: Index(['Case Number', 'Date', 'Year', 'Type', 'Country', 'Area', 'Location',\n",
       "       'Activity', 'Name', 'Sex ', 'Age', 'Injury', 'Fatal (Y/N)', 'Time',\n",
       "       'Species ', 'Investigator or Source', 'pdf', 'href formula', 'href',\n",
       "       'Case Number.1', 'Case Number.2', 'original order', 'Unnamed: 22',\n",
       "       'Unnamed: 23'],\n",
       "      dtype='object')\n",
-      "Lista de columnas formateada:  Index(['Case Number', 'Date', 'Year', 'Type', 'Country', 'Area', 'Location',\n",
+      "The formatted list of columns:  Index(['Case Number', 'Date', 'Year', 'Type', 'Country', 'Area', 'Location',\n",
       "       'Activity', 'Name', 'Sex', 'Age', 'Injury', 'Fatal (Y/N)', 'Time',\n",
       "       'Species', 'Investigator Or Source', 'Pdf', 'Href Formula', 'Href',\n",
       "       'Case Number.1', 'Case Number.2', 'Original Order', 'Unnamed: 22',\n",
@@ -362,19 +361,19 @@
     }
    ],
    "source": [
-    "#Lista de columnas\n",
-    "print(\"Lista de columnas original:\", df.columns)\n",
+    "#List of columns\n",
+    "print(\"Original list of columns:\", df.columns)\n",
     "\n",
-    "#Lista de columnas con el mismo formato\n",
+    "#List of columns with the same format\n",
     "df.columns = df.columns.str.title()\n",
     "df.columns = df.columns.str.strip()\n",
     "\n",
-    "print(\"Lista de columnas formateada: \", df.columns)"
+    "print(\"The formatted list of columns: \", df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +577,7 @@
        "4    2016.09.15            5989  AUSTRALIA Victoria  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,8 +586,8 @@
     "df['Country and Area'] = df['Country'] +' '+ df['Area']\n",
     "\n",
     "\n",
-    "df.drop(['Unnamed: 22', 'Unnamed: 23', 'Href Formula', 'Pdf'], axis=1, inplace = True) #Datos no necesarios o redundantes.\n",
-    "df.drop(['Country', 'Area'], axis=1, inplace = True) #Datos para mezclar en una sola columna.\n",
+    "df.drop(['Unnamed: 22', 'Unnamed: 23', 'Href Formula', 'Pdf'], axis=1, inplace = True) #Unnecessary or redundant data.\n",
+    "df.drop(['Country', 'Area'], axis=1, inplace = True) #Merging two columns\n",
     "\n",
     "df.head()"
    ]
@@ -597,12 +596,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hipótesis 1: Las personas que pescan (con arpón) reciben más ataques que las que realizan otra actividad."
+    "# Hypothesis # 1: Spear-fishers are more frequently attacked than peolpe doing any other activity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -611,50 +610,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tipo de datos en la columna actividad:\n",
-      " Surfing                                 904\n",
-      "Swimming                                819\n",
-      "Fishing                                 414\n",
-      "Spearfishing                            321\n",
-      "Bathing                                 153\n",
-      "                                       ... \n",
-      "He drowned when boat capsized             1\n",
-      "Wading with surfboard                     1\n",
-      "Fishing - 'tag & release'                 1\n",
-      "Fishing schooner Jose Luis foundered      1\n",
-      "Fell overboard                            1\n",
+      "Type of data in the Activity column:\n",
+      " Surfing                                            904\n",
+      "Swimming                                           819\n",
+      "Fishing                                            414\n",
+      "Spearfishing                                       321\n",
+      "Bathing                                            153\n",
+      "                                                  ... \n",
+      "Fishing for tarpon                                   1\n",
+      "Bitten after dhow shipwrecked                        1\n",
+      "The Dwarka foundered                                 1\n",
+      "Fishing / standing in waist deep water               1\n",
+      "The 500-ton coastal trader Polurrian foundered       1\n",
       "Name: Activity, Length: 1492, dtype: int64\n",
       "\n",
       "\n",
       "\n",
-      "Tipo de datos en la columna fatalidad:\n",
+      "Type of data in the Fatality column:\n",
       " N          4315\n",
       "Y          1552\n",
       "UNKNOWN      94\n",
       " N            8\n",
-      "F             1\n",
       "#VALUE!       1\n",
-      "n             1\n",
       "N             1\n",
+      "n             1\n",
+      "F             1\n",
       "Name: Fatal (Y/N), dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "#Para saber qué tipo de datos hay en cada columna para poder limpiarlos:\n",
+    "#In order to know what type of data there is in every column:\n",
     "\n",
-    "print(\"Tipo de datos en la columna actividad:\\n\", df[\"Activity\"].value_counts())\n",
+    "print(\"Type of data in the Activity column:\\n\", df[\"Activity\"].value_counts())\n",
     "print(\"\\n\\n\")\n",
-    "print(\"Tipo de datos en la columna fatalidad:\\n\", df[\"Fatal (Y/N)\"].value_counts())"
+    "print(\"Type of data in the Fatality column:\\n\", df[\"Fatal (Y/N)\"].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creamos funciones para unificar el tipo de datos: mayúsculas, espacios, etc.\n",
+    "#Creation of functions to standarize the type of data: lowercase, spaces, etc.\n",
     "\n",
     "df = df.apply(lambda x: x.str.strip() if x.dtype == \"object\" else x)\n",
     "df = df.apply(lambda x: x.str.title() if x.dtype == \"object\" else x)"
@@ -662,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -671,70 +670,91 @@
        "N          4325\n",
        "Y          1552\n",
        "Unknown      94\n",
-       "F             1\n",
        "#Value!       1\n",
+       "F             1\n",
        "Name: Fatal (Y/N), dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Comprobamos que los datos han cambiado:\n",
+    "#Checking the data has changed:\n",
     "\n",
     "df[\"Fatal (Y/N)\"].value_counts()\n",
     "\n",
-    "#Los valores mal registrados se han agrupado en la categoría Y o N tras formatearlos."
+    "#Faulty values were cluttered in the Y/N category after formatting them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total de personas que estaban pescando: 328\n",
-      "Total de personas que no estaban pescando: 5664\n",
-      "Total de personas matadas: 1552\n",
-      "Total de ataques no fatales: 4325\n",
-      "Total de personas atacadas: 5992\n",
+      "Total of people spearfishing: 328\n",
+      "Total of people not spearfishing: 5664\n",
+      "Total of killed people: 1552\n",
+      "Total of non fatal attacks: 4325\n",
+      "Total of attacked people: 5992\n",
       "\n",
       "\n",
       "\n",
-      "La proporción de supervivientes/muertes/desconocido es: 72.0 / 26.0 / 2.0\n"
+      "The percentage of survivors/deaths/unknown is: 72.0 / 26.0 / 2.0\n"
      ]
     }
    ],
    "source": [
-    "activity_death = df[['Activity', 'Fatal (Y/N)']] #Nuevo dataframe para utilizar sólo los recursos de memoria necesarios.\n",
+    "activity_death = df[['Activity', 'Fatal (Y/N)']] #New dataframe to use only the memory resources necessary.\n",
     "\n",
-    "#Actividad: spearfishing\n",
+    "#Activity: spearfishing\n",
     "people_spearfishing = activity_death[(activity_death.Activity == 'Spearfishing')]\n",
-    "print(\"Total de personas que estaban pescando:\", len(people_spearfishing.index))\n",
+    "print(\"Total of people spearfishing:\", len(people_spearfishing.index))\n",
     "\n",
-    "#Actividad: NO spearfishing\n",
+    "#Activity: NO spearfishing\n",
     "people_not_spearfishing = activity_death[(activity_death.Activity != 'Spearfishing')]\n",
-    "print(\"Total de personas que no estaban pescando:\", len(people_not_spearfishing.index))\n",
+    "print(\"Total of people not spearfishing:\", len(people_not_spearfishing.index))\n",
     "\n",
     "\n",
-    "#Muertos\n",
+    "#Killed\n",
     "killed = activity_death[(activity_death['Fatal (Y/N)'] == 'Y')]\n",
-    "print(\"Total de personas matadas:\", len(killed.index))\n",
+    "print(\"Total of killed people:\", len(killed.index))\n",
     "\n",
-    "#No muertos\n",
+    "#Not killed\n",
     "not_killed = activity_death[(activity_death['Fatal (Y/N)'] == 'N')]\n",
-    "print(\"Total de ataques no fatales:\", len(not_killed.index))\n",
-    "print(\"Total de personas atacadas:\", len(df.index))\n",
+    "print(\"Total of non fatal attacks:\", len(not_killed.index))\n",
+    "print(\"Total of attacked people:\", len(df.index))\n",
     "\n",
     "print(\"\\n\\n\")\n",
     "\n",
     "death_rate = df['Fatal (Y/N)'].value_counts(normalize=True)\n",
-    "print(\"La proporción de supervivientes/muertes/desconocido es:\", round(death_rate[0]*100),\"/\",round(death_rate[1]*100), \"/\", 100-(round(death_rate[0]*100) + round(death_rate[1]*100)))"
+    "print(\"The percentage of survivors/deaths/unknown is:\", round(death_rate[0]*100),\"/\",round(death_rate[1]*100), \"/\", 100-(round(death_rate[0]*100) + round(death_rate[1]*100)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "crosstab() missing 1 required positional argument: 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-9fab44f1b260>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrosstab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactivity_death\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: crosstab() missing 1 required positional argument: 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.crosstab(activity_death)"
    ]
   },
   {
@@ -1055,8 +1075,6 @@
    ],
    "source": [
     "#De forma gráfica:\n",
-    "\n",
-    "import matplotlib.pylab as plt\n",
     "\n",
     "plt.plot(*zip(*sorted(Counter(primera_mitad).items())))\n",
     "plt.show()\n",
